feat: prepare microservices for kubernetes